--- a/Sparc.Blossom.Server/App.scss
+++ b/Sparc.Blossom.Server/App.scss
@@ -4,12 +4,34 @@
 
 //Shared
 @import "Shared/NavMenu";
+@import "Shared/Footer";
 
 //Pages
 @import "Pages/Index";
 @import "Pages/Guide";
+@import "Pages/BlogList";
+@import "Pages/Blog";
 
 
 body {
     margin: 0;
+    background: $background;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
+
+button {
+    cursor: pointer;
+}
+
+/*.ibis-translate {
+    padding: 0;
+    margin: 0;
+}
+
+.ibis-translating {
+    visibility: visible;
+    opacity: 0.3;
+}*/
