--- a/Sparc.Blossom.Server/Pages/Guide.razor
+++ b/Sparc.Blossom.Server/Pages/Guide.razor
@@ -1,4 +1,4 @@
-﻿@page "/Guide"
+﻿@page "/guide"
 
 <div class="guide">
     <section class="guide--hero">
@@ -8,32 +8,80 @@
         </div>
         <div class="ask-questions">
             <input type="text" placeholder="Ask any questions here" />
-            <button class="button-ask"><img src="images/Group 343.png" /></button>
+            <button class="button-ask"><img src="images/Arrow Forward.png" /></button>
         </div>
     </section>
     <section class="guide--categories">
         <div class="category">
-            <p class="subtitle-1">begin</p>
-            <div class="wrapper">
-                <h2>Explore</h2>
-                <h2>Install</h2>
-                <h2>Tutorial</h2>
+            <p class="subtitle-1">Begin here</p>
+            <div class="guide--heading">
+                @if (Section == "what-is-blossom")
+                {
+                    <img src="images/Asterisk Four Lines.png" class="asterisk" />
+                }
+                <h2 @onclick="@(e=> ToggleSection("what-is-blossom"))">Get to know Blossom</h2>
             </div>
+            <div class="guide--heading">
+                @if(Section == "what-is-blossom")
+                {
+                    <Sparc.Blossom.Server.GuideContent.GetToKnowBlossom />
+                }
+                <h2 @onclick="@(e=> ToggleSection("install"))">Install</h2>
+            </div>
+                @if(Section == "install")
+                {
+                    <div class="guide--wrapper">
+                        <img src="/images/Arrow_left.png" />
+                        <div class="guide--content"></div>
+                        <img src="/images/Arrow_right.png" />
+                    </div>
+                }
+                <h2>Tutorial</h2>
+                <h2> Customization</h2>            
         </div>
         <div class="category">        
             <p class="subtitle-1">enjoy</p>
             <div class="wrapper">
-                <h2>Tips & Tricks</h2>
+                <h2>Tips and Tricks</h2> 
                 <h2>Tools</h2>
-                <h2>Previews</h2>
+                <h2>Features</h2>
             </div>
         </div>
         <div class="category">
             <p class="subtitle-1">errors</p>
             <div class="wrapper">
                 <h2>Troubleshooting</h2>
-                <h2>Contact Us</h2>
+                <h2>Contact us</h2>
             </div>
         </div>
     </section>
 </div>
+<Footer />
+
+
+@code {
+    public string Show = "";
+    public string Section = "";
+    public string SubSection = "one";
+
+    private void ToggleSection(string sectionName)
+    {
+        if (Section == sectionName)
+        {
+            Section = "";
+        }
+        else
+        {
+            Section = sectionName;
+        }
+       
+        //if (Show == "show")
+        //{
+        //    Show = "";
+        //}
+        //else
+        //{
+        //    Show = "show";
+        //}
+    }
+}
