--- a/Sparc.Blossom.Server/Pages/Index.scss
+++ b/Sparc.Blossom.Server/Pages/Index.scss
@@ -1,26 +1,36 @@
 ﻿@import "../App.Variables.scss";
 
 .home {
+    width: 100%;
     background: $background;
     color: $grey-100;
-    /*font-family: 'NimbusSansExtd';*/
-    font-family: Helvetica;
+    font-family: 'NimbusSansExtd', sans-serif;
     font-weight: 400;
-    overflow-x: hidden;
-    
+
     section {
         padding: 150px 0;
     }
 
     &--hero {
+        width: 100%;
         margin: 0 auto;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 0;
+
+        .container {
+            padding: 0 15px;
+        }
 
         .hero--image {
-            width: 1166px;
-            margin: 0 auto;
+            width: 100%;
+            margin-bottom: 35px;
+            text-align: center;
 
             img {
-                width: 100%;
+                width: 551px;
             }
         }
 
@@ -28,16 +38,57 @@
             width: 809px;
             margin: 0 auto;
             text-align: center;
+            font-family: 'NimbusSansExtd', sans-serif;
+            font-weight: 400;
+
+            h1 {
+                margin: 0;
+                margin-bottom: 15px;
+            }
+
+            p {
+                margin: 0;
+                font-family: 'NimbusSansExtd';
+                font-weight: 400;
+                line-height: 140%;
+            }
+        }
+    }
+
+    .float-wrapper {
+        width: 100%;
+        position: relative;
+
+        .float-spacer {
+            width: 100vw;
+            height: 100vh;
+            background: transparent;
         }
     }
 
     &--intro {
+        width: 100%;
         padding-bottom: 312px;
+        background: $background;
+
+        .container {
+            padding: 0 15px;
+        }
 
         .header {
-            width: 809px;
+            width: 1054px;
             margin: 0 auto;
             text-align: center;
+            font-family: 'NimbusSansExtd', sans-serif;
+            font-weight: 400;
+
+            h3, p {
+                margin: 0;
+            }
+
+            h3 {
+                margin-bottom: 8px;
+            }
         }
 
         .interactive-block {
@@ -57,92 +108,244 @@
                 transform: translate(-50%, 0);
             }
         }
+    }
 
-        .project-carousel {
-            width: 100vw;
-            margin-top: 107px;
-            display: flex;
-            justify-content: space-between;
+    .projectlogo-carousel {
+        width: 100%;
+        padding: 0 0 100px 0;
+        display: flex;
+        background: $black;
 
-            img {
-                height: 55px;
-            }
+        .mud-carousel {
+            height: 50px;
+        }
+
+        img {
+            width: auto;
+            height: 44px;
+            margin: 0 20px;
         }
     }
 
-    &--about {
-        background: #111111;
-        display: flex;
-        justify-content: center;
-        gap: 90px;
+    section.home--about {
+        padding: 120px 0;
+    }
 
-        .petals {
-            img {
-                width: 263px;
+    &--about {
+        width: 100%;
+        height: 100%;
+        border: none;
+        border-radius: 50px;
+        background: $grey-200;
+        color: $grey-900;
+
+        .container {
+            height: 100%;
+            padding: 0 80px;
+        }
+
+        .feature {
+            width: 100%;
+            height: 501px;
+            margin: 120px 0;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            gap: 144px;
+
+            .image-wrapper {
+                margin: auto 0;
+
+                img.feature-image {
+                    width: 347px;
+                    height: 347px;
+                }
+            }
+
+            .content-wrapper {
+                width: 520px;
+                margin: auto 0;
+                padding: 77px 0;
+                text-align: center;
+
+                h4 {
+                    text-decoration: underline;
+                }
+            }
+
+            &.reverse {
+                flex-direction: row-reverse;
             }
         }
 
-        .about--wrapper {
-            width: 632px;
+        div:first-child {
+            margin-top: 0;
+        }
+
+        div:nth-child(4) {
+            margin-bottom: 0;
+        }
+
+        .button-wrapper {
+            width: 100%;
+            padding-top: 60px;
             text-align: center;
 
-            h4 {
-                text-decoration: underline;
-            }
-
-            & > div {
-                margin-bottom: 40px;
-                padding: 77px 55px;
-            }
-
-            div:nth-child(4) {
-                margin-bottom: 0px;
-                padding-bottom: 0px;
-            }
-
-            button.learn-more {
+            .learn-more {
                 padding: 8px 58px;
-                border: solid 1px $grey-100;
+                border: solid 2px $grey-900;
                 border-radius: 50px;
-                /*font-family: 'NimbusSansExtd';*/
-                font-family: Helvetica;
-                font-weight: 400;
+                font-family: 'NimbusSansExtd', sans-serif;
                 font-size: 26px;
                 background: transparent;
-                color: $grey-100;
+                color: $grey-900;
+                text-decoration: none;
             }
         }
     }
 
     &--projects {
+        width: 100%;
         margin: 0 auto;
         text-align: center;
+        background: $background;
+        position: relative;
+
+        .header {
+            margin-bottom: 60px;
+
+            h3, p {
+                margin: 0
+            }
+
+            h3 {
+                margin-bottom: 8px;
+            }
+        }
+
+        .project-carousel {
+            width: 100%;
+            padding: 20px 0;
+            position: relative;
+            overflow: hidden;
+
+            .project-wrapper {
+                width: 100%;
+                display: flex;
+                justify-content: center;
+                gap: 24px;
+
+                .github-card {
+                    width: 413px;
+                    height: 336px;
+                    padding-bottom: 9px;
+                    border: 1px solid $white;
+                    border-radius: 20px;
+                    cursor: pointer;
+                    text-decoration: none;
+
+                    img.project-photo {
+                        width: 377px;
+                        height: 257.5px;
+                        margin: 18px;
+                        border-radius: 15px;
+                    }
+
+                    .github-wrapper {
+                        margin: 0 18px;
+                        display: flex;
+                        justify-content: space-between;
+                        vertical-align: middle;
+
+                        p.subtitle-1 {
+                            margin: auto 0;
+                            color: $white;
+                        }
+
+                        .github-logo {
+                            width: 29px;
+                            height: 29px;
+                            margin: auto 0;
+                            color: $white;
+                            transition-duration: 0.4s;
+
+                            &:hover {
+                                transform: translateY(-2px);
+                                transition-duration: 0.2s;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .arrows-container {
+                backdrop-filter: blur(4px);
+                border-top-right-radius: 125px;
+                border-bottom-right-radius: 125px;
+                width: 126px;
+                height: 306px;
+                position: absolute;
+                top: 50px;
+                z-index: 10;
+
+                img {
+                    opacity: .3;
+                    height: 306px;
+                    border-top-right-radius: 125px;
+                    border-bottom-right-radius: 125px;
+                    cursor: pointer;
+                }
+
+                &.carousel-forward {
+                    transform: rotate(180deg);
+                    right: 0;
+                }
+            }
+        }
     }
 
     &--cta {
-        width: 1039px;
-        margin: 0 auto;
-        text-align: center;
+        width: 100%;
+        padding: 150px 0;
+        background: $background;
+
+        .container {
+            padding: 0 80px;
+            display: flex;
+            justify-content: center;
+            gap: 40px;
+            flex-wrap: wrap;
+        }
+
+        .header {
+            max-width: 630px;
+
+            h3 {
+                font-size: 52px;
+            }
+        }
 
         .cta-input {
-            margin-top: 50px;
+            margin: auto 0;
             display: flex;
-            gap: 19px;
+            gap: 15px;
 
             input {
-                width: 900px;
-                height: 100px;
-                padding: 0 47px;
+                width: 560px;
+                height: 55px;
+                padding: 0 35px;
                 border: 2px solid $grey-100;
                 border-radius: 100px;
                 background: transparent;
-                color: $white;
-                font-size: 41px;
+                color: $grey-200;
+                font-family: 'NimbusSansExtd';
+                font-weight: 400;
+                font-size: 20px;
             }
 
             button.sign-up {
-                width: 100px;
-                height: 100px;
+                width: 55px;
+                height: 55px;
                 padding: 0;
                 margin: 0;
                 background: transparent;
@@ -150,6 +353,221 @@
 
                 img {
                     width: 100%;
+                }
+            }
+        }
+    }
+
+    @media only screen and (max-width: 460px) {
+        section {
+            width: 100%;
+            padding: 80px 0;
+        }
+
+        &--hero {
+            .hero--image {
+                width: 100%;
+                margin-bottom: 15px;
+                text-align: center;
+
+                img {
+                    width: 80%;
+                }
+            }
+
+            .header {
+                max-width: 100%;
+            }
+        }
+
+        .float-wrapper {
+            width: 100%;
+            position: relative;
+        }
+
+        &--intro {
+            width: 100%;
+            padding-bottom: 312px;
+            background: $background;
+
+            .header {
+                width: 100%;
+                max-width: 370px;
+            }
+
+            .interactive-block {
+                width: 100%;
+                max-width: 370px;
+                height: 200px;
+                margin-top: 40px;
+                border-radius: 25px;
+
+                img {
+                    max-width: 200px;
+                }
+            }
+
+            .projectlogo-carousel {
+                margin: 0 -15px;
+                margin-top: 80px;
+                margin-bottom: 30px;
+                display: flex;
+                justify-content: space-between;
+                gap: 35px;
+                overflow: hidden;
+
+                img {
+                    height: 25px;
+                }
+            }
+        }
+
+        section.home--about {
+            padding: 0px;
+        }
+
+        &--about {
+            width: 100%;
+            height: 100%;
+            border: none;
+            border-radius: 50px;
+            background: $grey-200;
+            color: $grey-900;
+
+            .container {
+                height: 100%;
+                padding: 80px 20px;
+            }
+
+            .feature {
+                width: 100%;
+                height: 100%;
+                margin: 60px 0;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                gap: 0;
+
+                .image-wrapper {
+                    margin: 0 auto;
+
+                    img.feature-image {
+                        width: 200px;
+                        height: 200px;
+                    }
+                }
+
+                .content-wrapper {
+                    width: 100%;
+                    margin: 0 auto;
+                    padding: 0;
+                }
+
+                &.reverse {
+                    flex-direction: column;
+                }
+            }
+
+            div:nth-child(4) {
+                margin-bottom: 0;
+            }
+
+            .button-wrapper {
+                .learn-more {
+                    padding: 8px 35px;
+                    font-size: 18px;
+                }
+            }
+        }
+
+        &--projects {
+            .header {
+                margin-bottom: 60px;
+                padding: 0 20px;
+            }
+
+            .project-carousel {
+                .project-wrapper {
+                    justify-content: start;
+                    gap: 15px;
+
+                    &:first-child {
+                        padding-left: 20px;
+                    }
+
+
+                    .github-card {
+                        width: 100%;
+                        height: auto;
+                        padding-bottom: 9px;
+                        border-radius: 15px;
+
+                        img.project-photo {
+                            width: 200px;
+                            height: auto;
+                            margin: 10px;
+                            border-radius: 10px;
+                        }
+
+                        .github-wrapper {
+                            margin: 0 10px;
+
+                            img.github-logo {
+                                width: 20px;
+                                height: 20px;
+                            }
+                        }
+                    }
+                }
+
+                .arrows-container {
+                    width: 62px;
+                    height: 150px;
+                    top: 40px;
+
+                    img {
+                        height: 150px;
+                    }
+                }
+            }
+        }
+
+        section.home--cta {
+            padding: 0;
+            padding-top: 60px;
+        }
+
+        &--cta {
+            .container {
+                padding: 0 20px;
+                flex-direction: column;
+                justify-content: space-between;
+                gap: 0;
+                flex-wrap: nowrap;
+            }
+
+            .header {
+                width: 100%;
+
+                h3 {
+                    font-size: 28px;
+                }
+            }
+
+            .cta-input {
+                margin: auto 0;
+                gap: 15px;
+
+                input {
+                    width: 100%;
+                    height: 30px;
+                    padding: 0 25px;
+                    font-size: 16px;
+                }
+
+                button.sign-up {
+                    width: 36px;
+                    height: 36px;
                 }
             }
         }
