--- a/Sparc.Blossom.Server/Shared/NavMenu.scss
+++ b/Sparc.Blossom.Server/Shared/NavMenu.scss
@@ -1,22 +1,25 @@
 ﻿@import "../App.Variables.scss";
 
 nav {
-    width: 100%;
-    box-sizing: border-box;
-    padding: 12px 50px;
+    width: 100vw;
+    margin: 0;
+    padding-top: 12px;
+    padding-bottom: 12px;
     background: $background;
+    border-top: 1px solid $white;
     display: flex;
     justify-content: space-between;
     position: fixed;
-    top: 0;
+    bottom: 0;
     z-index: 100;
 
     .logo {
         img {
+            margin-left: 50px;
             width: 142px;
         }
     }
-
+    
     .links-wrapper {
         display: flex;
         margin: auto 0;
@@ -24,25 +27,48 @@ nav {
         .links {
             a {
                 margin-right: 50px;
-                /*font-family: 'NimbusSansExtd';*/
-                font-family: Helvetica;
-                font-weight: 400;
+                font-family: 'NimbusSansExtd', sans-serif;
                 color: $grey-100;
                 font-size: 16px;
+                line-height: 100%;
                 text-decoration: none;
             }
         }
 
-        button.join-community {
-            padding: 0 25px;
-            border: solid 1px $grey-100;
+        .explore-blossom {
+            margin-right: 50px;
+            padding: 6px 25px;
+            border: solid 2px $grey-100;
             border-radius: 50px;
-            /*font-family: 'NimbusSansExtd';*/
-            font-family: Helvetica;
-            font-weight: 400;
+            font-family: 'NimbusSansExtd', sans-serif;
             background: transparent;
             color: $grey-100;
             font-size: 16px;
+            text-decoration: none;
+        }
+    }
+
+    @media only screen and (max-width: 800px) {
+        padding: 9px 0;
+        gap: 20px;
+
+        .logo {
+            img {
+                margin-left: 20px;
+                width: 120px;
+            }
+        }
+
+        .links-wrapper {
+            display: flex;
+            margin: auto 0;
+
+            button.explore-blossom {
+                margin-right: 20px;
+                padding: 2px 18px;
+                font-size: 13px;
+                flex-wrap: wrap;
+            }
         }
     }
 }
