--- a/Sparc.Blossom.Server/wwwroot/css/app.css
+++ b/Sparc.Blossom.Server/wwwroot/css/app.css
@@ -1,8 +1,15 @@
 ﻿body {
-  font-family: NimbusSansExtd;
+  font-family: "NimbusSansExtd", sans-serif;
   font-weight: 400;
 }
-body h1, body h2, body h3, body h4, body p {
+body h1, body h2, body h3, body h4 {
+  font-family: "NimbusSansExtd", sans-serif;
+  font-weight: 400;
+  line-height: 115%;
+}
+body p {
+  font-family: "NimbusSans", sans-serif;
+  font-weight: 400;
   line-height: 115%;
 }
 body h1 {
@@ -29,50 +36,54 @@ body p.medium {
 body p.small {
   font-size: 14px;
 }
+@media only screen and (max-width: 460px) {
+  body h1 {
+    font-size: 44px;
+  }
+  body h2 {
+    font-size: 36px;
+  }
+  body h3 {
+    font-size: 28px;
+  }
+  body h4 {
+    font-size: 23px;
+  }
+  body .title-1, body .subtitle-1 {
+    font-size: 18px;
+  }
+  body .title-2, body .subtitle-2 {
+    font-size: 16px;
+  }
+  body p.medium {
+    font-size: 16px;
+  }
+  body p.small {
+    font-size: 14px;
+  }
+}
 
 @font-face {
-  font-family: "CircularStd";
+  font-family: "NimbusSans";
   font-weight: 400;
-  src: url(../fonts/CircularStd-Book.ttf) format("truetype");
+  src: url(../fonts/Nimbus-Sans-Regular.ttf) format("opentype");
 }
 @font-face {
-  font-family: "CircularStd";
+  font-family: "NimbusSans";
   font-weight: 400;
   font-style: italic;
-  src: url(../fonts/CircularStd-BookItalic.ttf) format("truetype");
+  src: url(../fonts/Nimbus-Sans-RegularItalic.ttf) format("opentype");
 }
 @font-face {
-  font-family: "CircularStd";
-  font-weight: 500;
-  src: url(../fonts/CircularStd-Medium.ttf) format("truetype");
+  font-family: "NimbusSans";
+  font-weight: 700;
+  src: url(../fonts/Nimbus-Sans-Bold.ttf) format("opentype");
 }
 @font-face {
-  font-family: "CircularStd";
-  font-weight: 500;
+  font-family: "NimbusSans";
+  font-weight: 700;
   font-style: italic;
-  src: url(../fonts/CircularStd-MediumItalic.ttf) format("truetype");
-}
-@font-face {
-  font-family: "CircularStd";
-  font-weight: 600;
-  src: url(../fonts/CircularStd-Bold.ttf) format("truetype");
-}
-@font-face {
-  font-family: "CircularStd";
-  font-weight: 600;
-  font-style: italic;
-  src: url(../fonts/CircularStd-BoldItalic.ttf) format("truetype");
-}
-@font-face {
-  font-family: "CircularStd";
-  font-weight: 900;
-  src: url(../fonts/CircularStd-Black.ttf) format("truetype");
-}
-@font-face {
-  font-family: "CircularStd";
-  font-weight: 900;
-  font-style: italic;
-  src: url(../fonts/CircularStd-BlackItalic.ttf) format("truetype");
+  src: url(../fonts/Nimbus-Sans-BoldItalic.ttf) format("opentype");
 }
 @font-face {
   font-family: "NimbusSansExtd";
@@ -95,17 +106,20 @@ body p.small {
   src: url(../fonts/Nimbus-Sans-Extd-Black.ttf) format("truetype");
 }
 nav {
-  width: 100%;
-  box-sizing: border-box;
-  padding: 12px 50px;
+  width: 100vw;
+  margin: 0;
+  padding-top: 12px;
+  padding-bottom: 12px;
   background: #020201;
+  border-top: 1px solid #FFFFFF;
   display: flex;
   justify-content: space-between;
   position: fixed;
-  top: 0;
+  bottom: 0;
   z-index: 100;
 }
 nav .logo img {
+  margin-left: 50px;
   width: 142px;
 }
 nav .links-wrapper {
@@ -114,58 +128,156 @@ nav .links-wrapper {
 }
 nav .links-wrapper .links a {
   margin-right: 50px;
-  /*font-family: 'NimbusSansExtd';*/
-  font-family: Helvetica;
-  font-weight: 400;
+  font-family: "NimbusSansExtd", sans-serif;
+  color: #F6F4F3;
+  font-size: 16px;
+  line-height: 100%;
+  text-decoration: none;
+}
+nav .links-wrapper .explore-blossom {
+  margin-right: 50px;
+  padding: 6px 25px;
+  border: solid 2px #F6F4F3;
+  border-radius: 50px;
+  font-family: "NimbusSansExtd", sans-serif;
+  background: transparent;
   color: #F6F4F3;
   font-size: 16px;
   text-decoration: none;
 }
-nav .links-wrapper button.join-community {
-  padding: 0 25px;
-  border: solid 1px #F6F4F3;
-  border-radius: 50px;
-  /*font-family: 'NimbusSansExtd';*/
-  font-family: Helvetica;
+@media only screen and (max-width: 800px) {
+  nav {
+    padding: 9px 0;
+    gap: 20px;
+  }
+  nav .logo img {
+    margin-left: 20px;
+    width: 120px;
+  }
+  nav .links-wrapper {
+    display: flex;
+    margin: auto 0;
+  }
+  nav .links-wrapper button.explore-blossom {
+    margin-right: 20px;
+    padding: 2px 18px;
+    font-size: 13px;
+    flex-wrap: wrap;
+  }
+}
+
+footer {
+  width: 100%;
+  padding: 150px 0;
+  background: #020201;
+  color: #FFFFFF;
+  display: flex;
+  justify-content: space-around;
+  gap: 20px;
+  position: relative;
+}
+footer .footer--column p.title-2 {
+  font-family: "NimbusSansExtd";
   font-weight: 400;
-  background: transparent;
-  color: #F6F4F3;
-  font-size: 16px;
+  margin-bottom: 27px;
+}
+footer .footer--column .column-links {
+  display: flex;
+  flex-direction: column;
+}
+footer .footer--column .column-links a {
+  margin-bottom: 9px;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+@media only screen and (max-width: 460px) {
+  footer {
+    gap: 0px;
+  }
+  footer .footer--column p.title-2 {
+    font-size: 14px;
+  }
+  footer .footer--column .column-links a {
+    font-size: 12px;
+  }
 }
 
 .home {
+  width: 100%;
   background: #020201;
   color: #F6F4F3;
-  /*font-family: 'NimbusSansExtd';*/
-  font-family: Helvetica;
+  font-family: "NimbusSansExtd", sans-serif;
   font-weight: 400;
-  overflow-x: hidden;
 }
 .home section {
   padding: 150px 0;
 }
 .home--hero {
+  width: 100%;
   margin: 0 auto;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 0;
+}
+.home--hero .container {
+  padding: 0 15px;
 }
 .home--hero .hero--image {
-  width: 1166px;
-  margin: 0 auto;
+  width: 100%;
+  margin-bottom: 35px;
+  text-align: center;
 }
 .home--hero .hero--image img {
-  width: 100%;
+  width: 551px;
 }
 .home--hero .header {
   width: 809px;
   margin: 0 auto;
   text-align: center;
+  font-family: "NimbusSansExtd", sans-serif;
+  font-weight: 400;
+}
+.home--hero .header h1 {
+  margin: 0;
+  margin-bottom: 15px;
+}
+.home--hero .header p {
+  margin: 0;
+  font-family: "NimbusSansExtd";
+  font-weight: 400;
+  line-height: 140%;
+}
+.home .float-wrapper {
+  width: 100%;
+  position: relative;
+}
+.home .float-wrapper .float-spacer {
+  width: 100vw;
+  height: 100vh;
+  background: transparent;
 }
 .home--intro {
+  width: 100%;
   padding-bottom: 312px;
+  background: #020201;
+}
+.home--intro .container {
+  padding: 0 15px;
 }
 .home--intro .header {
-  width: 809px;
+  width: 1054px;
   margin: 0 auto;
   text-align: center;
+  font-family: "NimbusSansExtd", sans-serif;
+  font-weight: 400;
+}
+.home--intro .header h3, .home--intro .header p {
+  margin: 0;
+}
+.home--intro .header h3 {
+  margin-bottom: 8px;
 }
 .home--intro .interactive-block {
   width: 1054px;
@@ -183,77 +295,207 @@ nav .links-wrapper button.join-community {
   left: 50%;
   transform: translate(-50%, 0);
 }
-.home--intro .project-carousel {
-  width: 100vw;
-  margin-top: 107px;
+.home .projectlogo-carousel {
+  width: 100%;
+  padding: 0 0 100px 0;
   display: flex;
-  justify-content: space-between;
+  background: #000000;
 }
-.home--intro .project-carousel img {
-  height: 55px;
+.home .projectlogo-carousel .mud-carousel {
+  height: 50px;
+}
+.home .projectlogo-carousel img {
+  width: auto;
+  height: 44px;
+  margin: 0 20px;
+}
+.home section.home--about {
+  padding: 120px 0;
 }
 .home--about {
-  background: #111111;
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 50px;
+  background: #D0CECD;
+  color: #140903;
+}
+.home--about .container {
+  height: 100%;
+  padding: 0 80px;
+}
+.home--about .feature {
+  width: 100%;
+  height: 501px;
+  margin: 120px 0;
   display: flex;
+  flex-direction: row;
   justify-content: center;
-  gap: 90px;
+  gap: 144px;
 }
-.home--about .petals img {
-  width: 263px;
+.home--about .feature .image-wrapper {
+  margin: auto 0;
 }
-.home--about .about--wrapper {
-  width: 632px;
+.home--about .feature .image-wrapper img.feature-image {
+  width: 347px;
+  height: 347px;
+}
+.home--about .feature .content-wrapper {
+  width: 520px;
+  margin: auto 0;
+  padding: 77px 0;
   text-align: center;
 }
-.home--about .about--wrapper h4 {
+.home--about .feature .content-wrapper h4 {
   text-decoration: underline;
 }
-.home--about .about--wrapper > div {
-  margin-bottom: 40px;
-  padding: 77px 55px;
+.home--about .feature.reverse {
+  flex-direction: row-reverse;
 }
-.home--about .about--wrapper div:nth-child(4) {
-  margin-bottom: 0px;
-  padding-bottom: 0px;
+.home--about div:first-child {
+  margin-top: 0;
 }
-.home--about .about--wrapper button.learn-more {
+.home--about div:nth-child(4) {
+  margin-bottom: 0;
+}
+.home--about .button-wrapper {
+  width: 100%;
+  padding-top: 60px;
+  text-align: center;
+}
+.home--about .button-wrapper .learn-more {
   padding: 8px 58px;
-  border: solid 1px #F6F4F3;
+  border: solid 2px #140903;
   border-radius: 50px;
-  /*font-family: 'NimbusSansExtd';*/
-  font-family: Helvetica;
-  font-weight: 400;
+  font-family: "NimbusSansExtd", sans-serif;
   font-size: 26px;
   background: transparent;
-  color: #F6F4F3;
+  color: #140903;
+  text-decoration: none;
 }
 .home--projects {
+  width: 100%;
   margin: 0 auto;
   text-align: center;
+  background: #020201;
+  position: relative;
+}
+.home--projects .header {
+  margin-bottom: 60px;
+}
+.home--projects .header h3, .home--projects .header p {
+  margin: 0;
+}
+.home--projects .header h3 {
+  margin-bottom: 8px;
+}
+.home--projects .project-carousel {
+  width: 100%;
+  padding: 20px 0;
+  position: relative;
+  overflow: hidden;
+}
+.home--projects .project-carousel .project-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.home--projects .project-carousel .project-wrapper .github-card {
+  width: 413px;
+  height: 336px;
+  padding-bottom: 9px;
+  border: 1px solid #FFFFFF;
+  border-radius: 20px;
+  cursor: pointer;
+  text-decoration: none;
+}
+.home--projects .project-carousel .project-wrapper .github-card img.project-photo {
+  width: 377px;
+  height: 257.5px;
+  margin: 18px;
+  border-radius: 15px;
+}
+.home--projects .project-carousel .project-wrapper .github-card .github-wrapper {
+  margin: 0 18px;
+  display: flex;
+  justify-content: space-between;
+  vertical-align: middle;
+}
+.home--projects .project-carousel .project-wrapper .github-card .github-wrapper p.subtitle-1 {
+  margin: auto 0;
+  color: #FFFFFF;
+}
+.home--projects .project-carousel .project-wrapper .github-card .github-wrapper .github-logo {
+  width: 29px;
+  height: 29px;
+  margin: auto 0;
+  color: #FFFFFF;
+  transition-duration: 0.4s;
+}
+.home--projects .project-carousel .project-wrapper .github-card .github-wrapper .github-logo:hover {
+  transform: translateY(-2px);
+  transition-duration: 0.2s;
+}
+.home--projects .project-carousel .arrows-container {
+  backdrop-filter: blur(4px);
+  border-top-right-radius: 125px;
+  border-bottom-right-radius: 125px;
+  width: 126px;
+  height: 306px;
+  position: absolute;
+  top: 50px;
+  z-index: 10;
+}
+.home--projects .project-carousel .arrows-container img {
+  opacity: 0.3;
+  height: 306px;
+  border-top-right-radius: 125px;
+  border-bottom-right-radius: 125px;
+  cursor: pointer;
+}
+.home--projects .project-carousel .arrows-container.carousel-forward {
+  transform: rotate(180deg);
+  right: 0;
 }
 .home--cta {
-  width: 1039px;
-  margin: 0 auto;
-  text-align: center;
+  width: 100%;
+  padding: 150px 0;
+  background: #020201;
+}
+.home--cta .container {
+  padding: 0 80px;
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+  flex-wrap: wrap;
+}
+.home--cta .header {
+  max-width: 630px;
+}
+.home--cta .header h3 {
+  font-size: 52px;
 }
 .home--cta .cta-input {
-  margin-top: 50px;
+  margin: auto 0;
   display: flex;
-  gap: 19px;
+  gap: 15px;
 }
 .home--cta .cta-input input {
-  width: 900px;
-  height: 100px;
-  padding: 0 47px;
+  width: 560px;
+  height: 55px;
+  padding: 0 35px;
   border: 2px solid #F6F4F3;
   border-radius: 100px;
   background: transparent;
-  color: #FFFFFF;
-  font-size: 41px;
+  color: #D0CECD;
+  font-family: "NimbusSansExtd";
+  font-weight: 400;
+  font-size: 20px;
 }
 .home--cta .cta-input button.sign-up {
-  width: 100px;
-  height: 100px;
+  width: 55px;
+  height: 55px;
   padding: 0;
   margin: 0;
   background: transparent;
@@ -262,12 +504,178 @@ nav .links-wrapper button.join-community {
 .home--cta .cta-input button.sign-up img {
   width: 100%;
 }
+@media only screen and (max-width: 460px) {
+  .home section {
+    width: 100%;
+    padding: 80px 0;
+  }
+  .home--hero .hero--image {
+    width: 100%;
+    margin-bottom: 15px;
+    text-align: center;
+  }
+  .home--hero .hero--image img {
+    width: 80%;
+  }
+  .home--hero .header {
+    max-width: 100%;
+  }
+  .home .float-wrapper {
+    width: 100%;
+    position: relative;
+  }
+  .home--intro {
+    width: 100%;
+    padding-bottom: 312px;
+    background: #020201;
+  }
+  .home--intro .header {
+    width: 100%;
+    max-width: 370px;
+  }
+  .home--intro .interactive-block {
+    width: 100%;
+    max-width: 370px;
+    height: 200px;
+    margin-top: 40px;
+    border-radius: 25px;
+  }
+  .home--intro .interactive-block img {
+    max-width: 200px;
+  }
+  .home--intro .projectlogo-carousel {
+    margin: 0 -15px;
+    margin-top: 80px;
+    margin-bottom: 30px;
+    display: flex;
+    justify-content: space-between;
+    gap: 35px;
+    overflow: hidden;
+  }
+  .home--intro .projectlogo-carousel img {
+    height: 25px;
+  }
+  .home section.home--about {
+    padding: 0px;
+  }
+  .home--about {
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 50px;
+    background: #D0CECD;
+    color: #140903;
+  }
+  .home--about .container {
+    height: 100%;
+    padding: 80px 20px;
+  }
+  .home--about .feature {
+    width: 100%;
+    height: 100%;
+    margin: 60px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 0;
+  }
+  .home--about .feature .image-wrapper {
+    margin: 0 auto;
+  }
+  .home--about .feature .image-wrapper img.feature-image {
+    width: 200px;
+    height: 200px;
+  }
+  .home--about .feature .content-wrapper {
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+  }
+  .home--about .feature.reverse {
+    flex-direction: column;
+  }
+  .home--about div:nth-child(4) {
+    margin-bottom: 0;
+  }
+  .home--about .button-wrapper .learn-more {
+    padding: 8px 35px;
+    font-size: 18px;
+  }
+  .home--projects .header {
+    margin-bottom: 60px;
+    padding: 0 20px;
+  }
+  .home--projects .project-carousel .project-wrapper {
+    justify-content: start;
+    gap: 15px;
+  }
+  .home--projects .project-carousel .project-wrapper:first-child {
+    padding-left: 20px;
+  }
+  .home--projects .project-carousel .project-wrapper .github-card {
+    width: 100%;
+    height: auto;
+    padding-bottom: 9px;
+    border-radius: 15px;
+  }
+  .home--projects .project-carousel .project-wrapper .github-card img.project-photo {
+    width: 200px;
+    height: auto;
+    margin: 10px;
+    border-radius: 10px;
+  }
+  .home--projects .project-carousel .project-wrapper .github-card .github-wrapper {
+    margin: 0 10px;
+  }
+  .home--projects .project-carousel .project-wrapper .github-card .github-wrapper img.github-logo {
+    width: 20px;
+    height: 20px;
+  }
+  .home--projects .project-carousel .arrows-container {
+    width: 62px;
+    height: 150px;
+    top: 40px;
+  }
+  .home--projects .project-carousel .arrows-container img {
+    height: 150px;
+  }
+  .home section.home--cta {
+    padding: 0;
+    padding-top: 60px;
+  }
+  .home--cta .container {
+    padding: 0 20px;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 0;
+    flex-wrap: nowrap;
+  }
+  .home--cta .header {
+    width: 100%;
+  }
+  .home--cta .header h3 {
+    font-size: 28px;
+  }
+  .home--cta .cta-input {
+    margin: auto 0;
+    gap: 15px;
+  }
+  .home--cta .cta-input input {
+    width: 100%;
+    height: 30px;
+    padding: 0 25px;
+    font-size: 16px;
+  }
+  .home--cta .cta-input button.sign-up {
+    width: 36px;
+    height: 36px;
+  }
+}
 
 .guide {
   width: 100%;
   padding: 0 188px;
   padding-top: 125px;
-  padding-bottom: 335px;
 }
 .guide--hero {
   width: 1039px;
@@ -277,6 +685,7 @@ nav .links-wrapper button.join-community {
 .guide--hero .header {
   width: 809px;
   margin: 0 auto;
+  font-family: "NimbusSansExtd", sans-serif;
 }
 .guide--hero .header h1 {
   margin-bottom: 10px;
@@ -295,8 +704,8 @@ nav .links-wrapper button.join-community {
   border: 2px solid #F6F4F3;
   border-radius: 100px;
   background: transparent;
-  color: #FFFFFF;
-  font-size: 41px;
+  color: #D0CECD;
+  font-size: 33px;
 }
 .guide--hero .ask-questions button {
   width: 100px;
@@ -313,12 +722,18 @@ nav .links-wrapper button.join-community {
   margin-bottom: 102px;
 }
 .guide--categories .category .subtitle-1 {
+  font-family: "NimbusSans", sans-serif;
   color: #A19D9A;
 }
 .guide--categories .category h2 {
   margin-bottom: 31px;
+  font-family: "NimbusSansExtd", sans-serif;
 }
 
 body {
   margin: 0;
+  background: #020201;
+}
+body::-webkit-scrollbar {
+  display: none;
 }
