--- a/Sparc.Blossom.Server/Pages/Index.razor
+++ b/Sparc.Blossom.Server/Pages/Index.razor
@@ -122,12 +122,10 @@
         </section>
         <section class="home--cta">
             <div class="container">
-                <div class="header">
+                <img src="/images/landing-cta.png"/>
+                <div class="header right">
                     <h3>Come and join us for the greatest marathon in the world</h3>
-                </div>
-                <div class="cta-input">
-                    <input type="text" placeholder="you@email.com" />
-                    <button class="sign-up"><img src="images/Arrow Forward.png" /></button>
+                    <a href="https://www.sparc.coop/" target="_blank" class="sign-up">Visit Sparc</a>
                 </div>
             </div>
         </section>
