--- a/Sparc.Blossom.Server/Pages/Index.scss
+++ b/Sparc.Blossom.Server/Pages/Index.scss
@@ -112,13 +112,11 @@
 
     .projectlogo-carousel {
         width: 100%;
+        margin: 0 auto;
         padding: 0 0 100px 0;
         display: flex;
+        justify-content: space-around;
         background: $black;
-
-        .mud-carousel {
-            height: 50px;
-        }
 
         img {
             width: auto;
@@ -322,39 +320,23 @@
 
             h3 {
                 font-size: 52px;
+                margin: 0 0 40px 0;
             }
         }
 
-        .cta-input {
-            margin: auto 0;
-            display: flex;
-            gap: 15px;
+        img {
+            width: 630px;
+            align-self: self-start;
+        }
 
-            input {
-                width: 560px;
-                height: 55px;
-                padding: 0 35px;
-                border: 2px solid $grey-100;
-                border-radius: 100px;
-                background: transparent;
-                color: $grey-200;
-                font-family: 'NimbusSansExtd';
-                font-weight: 400;
-                font-size: 20px;
-            }
-
-            button.sign-up {
-                width: 55px;
-                height: 55px;
-                padding: 0;
-                margin: 0;
-                background: transparent;
-                border: none;
-
-                img {
-                    width: 100%;
-                }
-            }
+        a {
+            padding: 16px 80px;
+            border-radius: 30px;
+            text-align: center;
+            background: $blue-100;
+            color: $black;
+            font-size: 26px;
+            text-decoration: none;
         }
     }
 
@@ -532,12 +514,9 @@
             }
         }
 
-        section.home--cta {
-            padding: 0;
-            padding-top: 60px;
-        }
-
         &--cta {
+            padding: 60px 0;
+            
             .container {
                 padding: 0 20px;
                 flex-direction: column;
@@ -546,28 +525,16 @@
                 flex-wrap: nowrap;
             }
 
+            img {
+                width: 460px;
+                margin-left: -30px;
+            }
+
             .header {
                 width: 100%;
 
                 h3 {
                     font-size: 28px;
-                }
-            }
-
-            .cta-input {
-                margin: auto 0;
-                gap: 15px;
-
-                input {
-                    width: 100%;
-                    height: 30px;
-                    padding: 0 25px;
-                    font-size: 16px;
-                }
-
-                button.sign-up {
-                    width: 36px;
-                    height: 36px;
                 }
             }
         }
