--- a/Sparc.Blossom.Server/wwwroot/css/app.css
+++ b/Sparc.Blossom.Server/wwwroot/css/app.css
@@ -66,24 +66,24 @@ body p.small {
 @font-face {
   font-family: "NimbusSans";
   font-weight: 400;
-  src: url(../fonts/Nimbus-Sans-Regular.ttf) format("opentype");
+  src: url(../fonts/Nimbus-Sans-Regular.otf) format("opentype");
 }
 @font-face {
   font-family: "NimbusSans";
   font-weight: 400;
   font-style: italic;
-  src: url(../fonts/Nimbus-Sans-RegularItalic.ttf) format("opentype");
+  src: url(../fonts/Nimbus-Sans-RegularItalic.otf) format("opentype");
 }
 @font-face {
   font-family: "NimbusSans";
   font-weight: 700;
-  src: url(../fonts/Nimbus-Sans-Bold.ttf) format("opentype");
+  src: url(../fonts/Nimbus-Sans-Bold.otf) format("opentype");
 }
 @font-face {
   font-family: "NimbusSans";
   font-weight: 700;
   font-style: italic;
-  src: url(../fonts/Nimbus-Sans-BoldItalic.ttf) format("opentype");
+  src: url(../fonts/Nimbus-Sans-BoldItalic.otf) format("opentype");
 }
 @font-face {
   font-family: "NimbusSansExtd";
@@ -297,12 +297,11 @@ footer .footer--column .column-links a {
 }
 .home .projectlogo-carousel {
   width: 100%;
+  margin: 0 auto;
   padding: 0 0 100px 0;
   display: flex;
+  justify-content: space-around;
   background: #000000;
-}
-.home .projectlogo-carousel .mud-carousel {
-  height: 50px;
 }
 .home .projectlogo-carousel img {
   width: auto;
@@ -475,34 +474,20 @@ footer .footer--column .column-links a {
 }
 .home--cta .header h3 {
   font-size: 52px;
+  margin: 0 0 40px 0;
 }
-.home--cta .cta-input {
-  margin: auto 0;
-  display: flex;
-  gap: 15px;
+.home--cta img {
+  width: 630px;
+  align-self: self-start;
 }
-.home--cta .cta-input input {
-  width: 560px;
-  height: 55px;
-  padding: 0 35px;
-  border: 2px solid #F6F4F3;
-  border-radius: 100px;
-  background: transparent;
-  color: #D0CECD;
-  font-family: "NimbusSansExtd";
-  font-weight: 400;
-  font-size: 20px;
-}
-.home--cta .cta-input button.sign-up {
-  width: 55px;
-  height: 55px;
-  padding: 0;
-  margin: 0;
-  background: transparent;
-  border: none;
-}
-.home--cta .cta-input button.sign-up img {
-  width: 100%;
+.home--cta a {
+  padding: 16px 80px;
+  border-radius: 30px;
+  text-align: center;
+  background: #3BD7FF;
+  color: #000000;
+  font-size: 26px;
+  text-decoration: none;
 }
 @media only screen and (max-width: 460px) {
   .home section {
@@ -639,9 +624,8 @@ footer .footer--column .column-links a {
   .home--projects .project-carousel .arrows-container img {
     height: 150px;
   }
-  .home section.home--cta {
-    padding: 0;
-    padding-top: 60px;
+  .home--cta {
+    padding: 60px 0;
   }
   .home--cta .container {
     padding: 0 20px;
@@ -650,42 +634,37 @@ footer .footer--column .column-links a {
     gap: 0;
     flex-wrap: nowrap;
   }
+  .home--cta img {
+    width: 460px;
+    margin-left: -30px;
+  }
   .home--cta .header {
     width: 100%;
   }
   .home--cta .header h3 {
     font-size: 28px;
   }
-  .home--cta .cta-input {
-    margin: auto 0;
-    gap: 15px;
-  }
-  .home--cta .cta-input input {
-    width: 100%;
-    height: 30px;
-    padding: 0 25px;
-    font-size: 16px;
-  }
-  .home--cta .cta-input button.sign-up {
-    width: 36px;
-    height: 36px;
-  }
 }
 
 .guide {
   width: 100%;
-  padding: 0 188px;
-  padding-top: 125px;
+  max-width: 1038px;
+  padding: 125px 20px;
+  margin: 0 auto;
+  color: #FFFFFF;
 }
 .guide--hero {
-  width: 1039px;
+  width: 100%;
   margin: 0 auto;
   text-align: center;
 }
 .guide--hero .header {
-  width: 809px;
   margin: 0 auto;
   font-family: "NimbusSansExtd", sans-serif;
+}
+.guide--hero .header p {
+  max-width: 705px;
+  margin: 0 auto;
 }
 .guide--hero .header h1 {
   margin-bottom: 10px;
@@ -698,8 +677,10 @@ footer .footer--column .column-links a {
   gap: 19px;
 }
 .guide--hero .ask-questions input {
-  width: 900px;
+  width: 90%;
+  max-width: 900px;
   height: 100px;
+  box-sizing: border-box;
   padding: 0 47px;
   border: 2px solid #F6F4F3;
   border-radius: 100px;
@@ -718,16 +699,60 @@ footer .footer--column .column-links a {
 .guide--hero .ask-questions button img {
   width: 100%;
 }
-.guide--categories .category {
+.guide .category {
   margin-bottom: 102px;
 }
-.guide--categories .category .subtitle-1 {
+.guide .category .subtitle-1 {
   font-family: "NimbusSans", sans-serif;
   color: #A19D9A;
 }
-.guide--categories .category h2 {
-  margin-bottom: 31px;
+.guide .category .guide--heading {
+  display: flex;
+}
+.guide .category .asterisk {
+  display: inline;
+  vertical-align: middle;
+  margin: 10px 30px 0 0;
+  align-self: self-start;
+}
+.guide .category h2 {
+  margin: 0;
   font-family: "NimbusSansExtd", sans-serif;
+  cursor: pointer;
+  display: inline;
+}
+.guide--wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px 0 60px 0;
+}
+.guide--wrapper .arrow {
+  align-self: center;
+  cursor: pointer;
+  margin: 0 10px;
+}
+.guide--content {
+  width: 100%;
+  margin: 0 auto;
+  background-color: #D0CECD;
+  border-radius: 20px;
+  padding: 60px;
+  box-sizing: border-box;
+  color: #000000;
+  display: none;
+  position: relative;
+}
+.guide--content.show-section {
+  display: block;
+}
+.guide--content .slide-number {
+  color: #D0CECD;
+  background: #000000;
+  padding: 7px 15px;
+  border-radius: 36px;
+  position: absolute;
+  top: 24px;
+  right: 28px;
 }
 
 body {
@@ -737,3 +762,17 @@ body {
 body::-webkit-scrollbar {
   display: none;
 }
+
+button {
+  cursor: pointer;
+}
+
+/*.ibis-translate {
+    padding: 0;
+    margin: 0;
+}
+
+.ibis-translating {
+    visibility: visible;
+    opacity: 0.3;
+}*/
