--- a/Sparc.Blossom.Server/Pages/BlogList.scss
+++ b/Sparc.Blossom.Server/Pages/BlogList.scss
@@ -1,5 +1,59 @@
 ﻿@import "../App.Variables.scss";
 
 .blog-list {
+    color: white;
+    text-align: center;
+    width: 100%;
 
+    .header {
+    }
+
+    .blog-post-list {
+        color: white;
+        text-align: left;
+        display: flex;
+        justify-content: center;
+        align-items: flex-start;
+        flex-wrap: wrap;
+
+        .blog-post {
+            width: 413px;
+            margin: 10.5px;
+            max-height: 433px;
+            display: flex;
+            flex-direction: column;
+
+            img {
+                width: 100%;
+                height: 277px;
+                border-radius: 20px;
+                object-fit: cover;
+            }
+
+            h2 {
+                margin: 7.5px;
+                font-family: 'NimbusSansExtd';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 26px;
+                line-height: 31px;
+            }
+
+            p {
+                font-family: 'NimbusSans';
+                font-style: normal;
+                font-weight: 400;
+                font-size: 26px;
+                line-height: 31px;
+                margin: 7.5px;
+            }
+        }
+
+        .no-img {
+            border: 1px solid white;
+            border-radius: 20px;
+            justify-content: flex-end;
+            height: 433px;
+        }
+    }
 }
