--- a/Sparc.Blossom.Server/wwwroot/css/app.css
+++ b/Sparc.Blossom.Server/wwwroot/css/app.css
@@ -327,7 +327,7 @@ footer .footer--column .column-links a {
 .home .projectlogo-carousel {
   width: 100%;
   margin: 0 auto;
-  padding: 0 0 100px 0;
+  padding: 100px 0 50px 0;
   display: flex;
   justify-content: space-between;
   background: #000000;
@@ -471,8 +471,6 @@ footer .footer--column .column-links a {
   border-bottom-right-radius: 125px;
   width: 126px;
   height: 306px;
-  /*                display: flex;
-  justify-content: space-between;*/
   position: absolute;
   top: 50px;
   z-index: 10;
@@ -687,23 +685,13 @@ footer .footer--column .column-links a {
   }
   .home--cta .header {
     width: 100%;
+    padding: 30px;
   }
   .home--cta .header h3 {
     font-size: 28px;
   }
-  .home--cta .cta-input {
-    margin: auto 0;
-    gap: 15px;
-  }
-  .home--cta .cta-input input {
-    width: 100%;
-    height: 30px;
-    padding: 0 25px;
-    font-size: 16px;
-  }
-  .home--cta .cta-input button.sign-up {
-    width: 36px;
-    height: 36px;
+  .home--cta a {
+    padding: 14px 60px;
   }
 }
 @media only screen and (max-width: 460px) {
@@ -957,10 +945,10 @@ footer .footer--column .column-links a {
   box-sizing: border-box;
   color: #000000;
   display: none;
+  position: relative;
 }
 .guide--content.show-section {
   display: block;
-  position: relative;
 }
 .guide--content .slide-number {
   color: #D0CECD;
@@ -971,6 +959,7 @@ footer .footer--column .column-links a {
   top: 24px;
   right: 28px;
 }
+
 body {
   margin: 0;
   background: #020201;
