Guide page content and styling updates

--- a/Sparc.Blossom.Server/Pages/Guide.razor
+++ b/Sparc.Blossom.Server/Pages/Guide.razor
@@ -37,21 +37,61 @@
                     <Sparc.Blossom.Server.GuideContent.Install />
                 }
             <div class="guide--heading">
-                @if (Section == "tutorial")
+                @if (Section == "examples")
                 {
                     <img src="images/Asterisk Four Lines.png" class="asterisk" />
                 }
-                <h2 @onclick="@(e=> ToggleSection("tutorial"))">Tutorial</h2>
+                <h2 @onclick="@(e=> ToggleSection("examples"))">Examples</h2>
             </div>
-            <div class="guide--heading">
+            @if(Section == "examples")
+            {
+                <Sparc.Blossom.Server.GuideContent.Examples />
+            }
+@*            <div class="guide--heading">
                 @if (Section == "customization")
                 {
                     <img src="images/Asterisk Four Lines.png" class="asterisk" />
                 }
                 <h2 @onclick="@(e=> ToggleSection("customization"))">Customization</h2>
-            </div>          
+            </div>   *@       
         </div>
-        <div class="category">        
+        <div class="category">
+            <p class="subtitle-1">build</p>
+            <div class="guide--heading">
+                @if (Section == "features")
+                {
+                    <img src="images/Asterisk Four Lines.png" class="asterisk" />
+                }
+                <h2 @onclick="@(e=> ToggleSection("features"))">Blossom.Features</h2>
+            </div>
+            @if (Section == "features")
+            {
+                <Sparc.Blossom.Server.GuideContent.Features />
+            }
+            <div class="guide--heading">
+                @if (Section == "data")
+                {
+                    <img src="images/Asterisk Four Lines.png" class="asterisk" />
+                }
+                <h2 @onclick="@(e=> ToggleSection("data"))">Data</h2>
+            </div>
+            @if (Section == "data")
+            {
+                <Sparc.Blossom.Server.GuideContent.Data />
+            }
+            <div class="guide--heading">
+                @if (Section == "faq")
+                {
+                    <img src="images/Asterisk Four Lines.png" class="asterisk" />
+                }
+                <h2 @onclick="@(e=> ToggleSection("faq"))">FAQ</h2>
+            </div>
+            @if (Section == "faq")
+            {
+                <Sparc.Blossom.Server.GuideContent.Faq />
+            }
+        </div>
+@*        <div class="category">        
             <p class="subtitle-1">enjoy</p>
             <div class="guide--heading">
                 @if (Section == "tipstricks")
@@ -74,8 +114,8 @@
                 }
                 <h2 @onclick="@(e=> ToggleSection("features"))">Features</h2>
             </div>
-        </div>
-        <div class="category">
+        </div>*@
+@*        <div class="category">
             <p class="subtitle-1">errors</p>
             <div class="guide--heading">
                 @if (Section == "troubleshooting")
@@ -91,11 +131,9 @@
                 }
                 <h2 @onclick="@(e=> ToggleSection("contact"))">Contact us</h2>
             </div>
-        </div>
+        </div>*@
     </section>
 </div>
-<Footer />
-
 
 @code {
     public string Show = "";
