--- a/Sparc.Blossom.Server/Pages/Index.scss
+++ b/Sparc.Blossom.Server/Pages/Index.scss
@@ -26,7 +26,7 @@
 
         .hero--image {
             width: 100%;
-            margin-bottom: 35px;
+            margin: 60px 0 35px;
             text-align: center;
 
             img {
@@ -348,6 +348,27 @@
             padding-top: 80px;
         }
 
+        &--hero {
+            padding: 100px 0;
+            line-height: 100%;
+
+            .hero--image {
+                margin: 0;
+
+                img {
+                    width: 430px;
+                }
+            }
+
+            .header {
+                width: 80%;
+
+                h1 {
+                    font-size: 50px;
+                }
+            }
+        }
+
         &--about {
             .feature {
                 margin: 60px 0;
@@ -378,6 +399,7 @@
         }
 
         &--hero {
+
             .hero--image {
                 width: 80%;
                 margin: 0 auto;
@@ -385,12 +407,16 @@
                 text-align: center;
 
                 img {
-                    width: 80%;
+                    width: 62%;
                 }
             }
 
             .header {
-                width: 100%;
+                width: 80%;
+
+                h1 {
+                    line-height: 100%;
+                }
             }
         }
 
@@ -578,11 +604,12 @@
         section {
             width: 100%;
             padding: 80px 0;
+            box-sizing: border-box;
         }
 
         &--hero {
             .hero--image {
-                width: 100%;
+                width: unset;
                 margin-bottom: 15px;
                 text-align: center;
 
@@ -592,7 +619,11 @@
             }
 
             .header {
-                max-width: 100%;
+                width: 100%;
+                
+                h1 {
+                    font-size: 45px;
+                }
             }
         }
 
@@ -640,6 +671,7 @@
 
         section.home--about {
             padding: 0px;
+            margin-top: -50px;
         }
 
         &--about {
@@ -750,7 +782,7 @@
 
         &--cta {
             padding: 60px 0;
-            
+
             .container {
                 padding: 0 20px;
                 flex-direction: column;
